demo/ing-guestbook.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /test/*
        backend:
          serviceName: nginx-hello
          servicePort: 80
      - path: /*
        backend:
          serviceName: frontend
          servicePort: 80
